--- a/Changes
+++ b/Changes
@@ -28,3 +28,8 @@ Revision history for Perl extension Cisco::Management.
       - Added option for /xx instead of dotted-octet format for 
         IP Mask in interface_ip().
       - Updated error message details.
+
+0.04  Thu May  7 14:10:40 2010
+      - Extra files from Apple 'make dist' causes issues on all 
+        other OS's.  Damn perl.org world-writeable issue with 
+        Windows.
